Sat Feb 21 01:23:32 2026  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: escape strings displayed into markup and avoid
	  improbable shell-shenanigans

	* help/*: updates

Sat Feb 21 00:06:29 2026  Jiri (George) Lebl <jirka@5z.com>

	* src/geniustests.txt: add a test for passing reference through

	* src/mpwrap.c: silence warning

	* src/parse.y: avoid improbable null dereference

Fri Feb 20 17:30:26 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* src/dict.[ch], src/eval.c: Fix a crash on referencing, fix referencing
	  true local variables, and make sure to define a local variable on
	  reference if no local variable is defined, so that we don't
	  reference global variables by mistake.
	
	* src/geniustests.txt: add tests for the fixes above.
	
	* lib/functions/complex_numbers.gel: Argument should complain when
	  given 0 rather than just quietly returning null.
	
	* help/C/genius.xml: Add more info to the manual.

Fri Feb 20 14:34:19 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* lib/calculus/integrals.gel: Add a version of the Adaptive
	  Gauss-Kronrod where the tolerances are specified as arguments,
	  useful if less precision is needed.
	
	* help/C/genius.xml: update

Fri Feb 20 14:22:21 2026  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/gtkplotcanvas.c: minor fix in a probably unused code path

Fri Feb 20 14:14:35 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* src/graphing.c, gtkextra/gtkplotcanvas.c: Fix plotting on scaled
	  displays.
	
	* src/graphing.c: set a default file name for the export dialog.

Thu Feb 19 18:11:21 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* lib/calculus/integration.gel: Implement CompositeSimpsonsRuleData
	  and some fixes to strings
	
	* help/C/genius.xml: updates to docs.

Thu Feb 19 15:38:03 2026  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.[ch], src/calc.c: Remove the special casing of -<number>^n
	  and treat it as any other expression.
