@@ -1,3 +1,9 @@
+Sun Feb 22 12:14:17 2026  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/number_theory/primes.gel: update the Mersenne prime known limit
+
+	* configure.ac: update a bit
+
 Sat Feb 21 01:23:32 2026  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: escape strings displayed into markup and avoid
